# replay-coach

./: .gitattributes  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
Docs/: aim-analysis.md  faceit-downloads-api-application.md  game-selection.md  pro-demo-collection-tos.md  reddit-post-draft.md
analysis/: build_cs2_db.py  build_esta_db.py  compare.py  esta.py  patterns.py  review.py
collect/: backfill.py  faceit.py
core/: __init__.py  env.py  schema.py
data/: pro_patterns_csgo_v0.json
parser/: __init__.py  base.py
parser/cs2/: __init__.py  economy.py  plugin.py
scripts/: download_esta.py  wsl-run.sh
tests/: test_build_cs2_db.py  test_economy.py  test_esta.py  test_faceit.py  test_review.py  test_schema.py  test_web.py
web/: app.py  pipeline.py
