[project]
name = "replay-coach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "demoparser2>=0.41.4",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
